#31 - Fixing up game dev images on services page

--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -154,8 +154,8 @@ h2 Services
       .feature_media#gamedev
         .keen-slider.main
           .keen-slider__slide
-            a(href='/assets/images/services/gamedev.png' class='lightbox')
-              img(src='/assets/images/services/gamedev.png')
+            a(href='/assets/images/services/gamedev.jpg' class='lightbox')
+              img(src='/assets/images/services/gamedev.jpg')
           .keen-slider__slide
             a(href='/assets/images/services/gamedev2.png' class='lightbox')
               img(src='/assets/images/services/gamedev2.png')
@@ -163,17 +163,17 @@ h2 Services
             a(href='/assets/images/services/gamedev3.png' class='lightbox')
               img(src='/assets/images/services/gamedev3.png')
           .keen-slider__slide
-            a(href='/assets/images/services/gamedev4.png' class='lightbox')
-              img(src='/assets/images/services/gamedev4.png')
+            a(href='/assets/images/services/gamedev4.jpg' class='lightbox')
+              img(src='/assets/images/services/gamedev4.jpg')
         .keen-slider.thumbnail
           .keen-slider__slide
-            img(src='/assets/images/services/gamedev.png')
+            img(src='/assets/images/services/gamedev.jpg')
           .keen-slider__slide
             img(src='/assets/images/services/gamedev2.png')
           .keen-slider__slide
             img(src='/assets/images/services/gamedev3.png')
           .keen-slider__slide
-            img(src='/assets/images/services/gamedev4.png')
+            img(src='/assets/images/services/gamedev4.jpg')
       .feature_content
         h3 Game development
         p
@@ -323,7 +323,8 @@ h2 Services
   .row.center
     .feature.wide
       .feature_media
-        img(src='/assets/images/tools/affinity_designer.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of a web page being designed in Affinity Designer')
+        a(href='/assets/images/tools/affinity_designer.png' class='lightbox')
+          img(src='/assets/images/tools/affinity_designer.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of a web page being designed in Affinity Designer')
       .feature_content
         h4 Illustration and photo editing software
         p
@@ -335,11 +336,13 @@ h2 Services
         p
           | The cornerstone of our capability in 3D Modelling and Rendering, Blender allows our team to access sophisticated tools for producing models, materials and 3D images. We can create custom photo realistic 3D models of  your product designs, optimised game models and create animated sequences for video ads, storytelling and interactive applications.
       .feature_media
-        img(src='/assets/images/tools/blender.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of Blender being used to create a 3D animation')
+        a(href='/assets/images/tools/blender.png' class='lightbox')
+          img(src='/assets/images/tools/blender.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of Blender being used to create a 3D animation')
   .row.center
     .feature.wide
       .feature_media
-        img(src='/assets/images/tools/davinci.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of DaVinci Resolve being used to edit a video')
+        a(href='/assets/images/tools/davinci.png' class='lightbox')
+          img(src='/assets/images/tools/davinci.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of DaVinci Resolve being used to edit a video')
       .feature_content
         h4 Video Editing Software
         p
@@ -351,11 +354,13 @@ h2 Services
         p
           | Our on premises server hosts our development environments, some of which are custom and others defined in automation tools like Ansible and Docker. Using cloud services for hosting and Github for CI/CD, version control, issue tracking and project management allows our team to work with a broad range of teams around the world. We can work within your organisations coding standards and policies or provide our own recommendations, depending on your needs.
       .feature_media
-        img(src='/assets/images/tools/vscode.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of VS Code')
+        a(href='/assets/images/tools/vscode.png' class='lightbox')
+          img(src='/assets/images/tools/vscode.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of VS Code')
   .row.center
     .feature.wide
       .feature_media
-        img(src='/assets/images/tools/dropbox.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of the company Dropbox')
+        a(href='/assets/images/tools/dropbox.png' class='lightbox')
+          img(src='/assets/images/tools/dropbox.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of the company Dropbox')
       .feature_content
         h4 Business Operations
         p
