--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -433,6 +433,7 @@ a.icon_button img:hover {
 .content .feature .feature_content {
   flex-basis: calc(90% - 1rem);
   flex-direction: row;
+  margin: 0 auto;
 }
 .content .feature .feature_media img {
   display: block;
@@ -447,10 +448,10 @@ a.icon_button img:hover {
 }
 .content .feature.wide .feature_content {
   padding: 1rem;
-  max-width: calc(45% - 2rem);
 }
 .content .feature.wide .feature_media {
-  max-width: calc(55% - 4rem);
+  margin: 2rem auto;
+  max-width: calc(99% - 4rem);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -479,6 +480,13 @@ a.icon_button img:hover {
     flex-basis: calc(45% - 2rem);
     padding: 1.25rem 2rem;
     text-align: left;
+  }
+  .content .feature.wide .feature_content {
+    max-width: calc(45% - 2rem);
+  }
+  .content .feature.wide .feature_media {
+    margin: inherit;
+    max-width: calc(55% - 2rem);
   }
   .content .feature .feature_media img {
     border-radius: 1rem;
