--- a/src/styles/sections/content.styl
+++ b/src/styles/sections/content.styl
@@ -199,6 +199,7 @@
 .content .feature .feature_content {
     flex-basis: calc(90% - 1rem);
     flex-direction: row;
+    margin: 0 auto;
 }
 
 .content .feature .feature_media img {
@@ -216,11 +217,11 @@
 
 .content .feature.wide .feature_content {
     padding: 1rem;
-    max-width: calc(45% - 2rem);
 }
 
 .content .feature.wide .feature_media
-    max-width: calc(55% - 4rem);
+    margin: 2rem auto
+    max-width: calc(99% - 4rem)
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -254,6 +255,16 @@
         flex-basis: calc(45% - 2rem);
         padding: 1.25rem 2rem;
         text-align: left;
+    }
+
+    .content .feature.wide {
+        .feature_content {
+            max-width: calc(45% - 2rem);
+        }
+        .feature_media {
+            margin: inherit;
+            max-width: calc(55% - 2rem);
+        }
     }
 
     .content .feature .feature_media img {
