#48 - Adding Wordpress content styles and handling titles

--- a/src/styles/1999.styl
+++ b/src/styles/1999.styl
@@ -17,3 +17,5 @@
 @import "sections/header.styl";
 @import "sections/footer.styl";
 @import "sections/menu.styl";
+@import "sections/blog_post.styl";
+@import "sections/wordpress_content.styl";
