--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -652,3 +652,161 @@ a.icon_button img:hover {
     margin-right: 1.5rem;
   }
 }
+.blog_post img {
+  width: 100% !important;
+  height: auto !important;
+}
+.blog_post li strong,
+.blog_post li,
+.blog_post p {
+  margin-bottom: 1rem;
+  line-height: 1.5rem;
+}
+.blog_post li strong {
+  display: block;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.wp-block-heading {
+  font-size: 1.8em;
+  margin-bottom: 1em;
+}
+.wp-block-image {
+  margin: 1em 0;
+  display: block;
+}
+.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.is-resized {
+  max-width: 100%;
+  height: auto;
+}
+.wp-element-caption {
+  font-size: 0.875em;
+  text-align: center;
+  color: #666;
+}
+.size-large {
+  width: 100%;
+}
+.size-full {
+  width: auto;
+}
+.wp-block-code {
+  background: #f5f5f5;
+  padding: 1em;
+  border-left: 3px solid #007cba;
+  overflow-x: auto;
+}
+.has-white-color {
+  color: #fff;
+}
+.has-black-background-color {
+  background-color: #000;
+  color: #fff;
+}
+.has-text-color {
+  color: var(--custom-text-color, #000);
+}
+.has-background {
+  background-color: var(--custom-background-color, #f0f0f0);
+}
+.has-link-color {
+  color: var(--link-color, #007cba);
+}
+.language-html {
+  color: #e44d26; /* HTML color */
+}
+.language-javascript {
+  color: #f7df1e; /* JavaScript color */
+}
+.token {
+  color: #000;
+}
+.tag {
+  color: #e44d26;
+}
+.punctuation {
+  color: #000;
+}
+.attr-name {
+  color: #007cba;
+}
+.attr-value {
+  color: #d14;
+}
+.attr-equals {
+  color: #000;
+}
+.script {
+  color: #000;
+}
+.keyword {
+  color: #007bff; /* Keyword color */
+}
+.function {
+  color: #3c8dbc; /* Function color */
+}
+.operator {
+  color: #000;
+}
+.number {
+  color: #007cba; /* Number color */
+}
+.wp-block-columns {
+  display: flex;
+  flex-wrap: wrap;
+}
+.is-layout-flex {
+  display: flex;
+}
+.wp-block-column {
+  flex: 1;
+  padding: 0.5em;
+}
+.wp-block-list {
+  list-style: disc;
+  margin-left: 2em;
+}
+.wp-block-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+.wp-image-43,
+.wp-image-54,
+.wp-image-62,
+.wp-image-66,
+.wp-image-80,
+.wp-image-82,
+.wp-image-83,
+.wp-image-85,
+.wp-image-86,
+.wp-image-88,
+.wp-image-93,
+.wp-image-94,
+.wp-image-97,
+.wp-image-98,
+.wp-image-100,
+.wp-image-102,
+.wp-image-103,
+.wp-image-124,
+.wp-image-135,
+.wp-image-136,
+.wp-image-99 {
+  max-width: 100%;
+  height: auto;
+}
+.has-nested-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+.is-cropped {
+  object-fit: cover;
+}
