#48 - Adding code block styles and SynthWave 84 theme

--- a/src/styles/sections/blog_post.styl
+++ b/src/styles/sections/blog_post.styl
@@ -1,4 +1,15 @@
 .blog_post {
+    display: block !important;
+
+    h2 {
+        font-family: SourceSans !important;
+        font-size: 4rem !important;
+        text-transform: none !important;
+        padding-bottom: 2rem !important;
+        font-style: italic !important;
+        line-height: 6rem !important;
+        font-weight: bold !important;
+    }
 
     img {
         width: 100% !important;
