--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -652,6 +652,18 @@ a.icon_button img:hover {
     margin-right: 1.5rem;
   }
 }
+.blog_post {
+  display: block !important;
+}
+.blog_post h2 {
+  font-family: SourceSans !important;
+  font-size: 4rem !important;
+  text-transform: none !important;
+  padding-bottom: 2rem !important;
+  font-style: italic !important;
+  line-height: 6rem !important;
+  font-weight: bold !important;
+}
 .blog_post img {
   width: 100% !important;
   height: auto !important;
@@ -699,10 +711,12 @@ a.icon_button img:hover {
   width: auto;
 }
 .wp-block-code {
-  background: #f5f5f5;
+  background: #0f0e22;
   padding: 1em;
   border-left: 3px solid #007cba;
   overflow-x: auto;
+  width: 100%;
+  margin-bottom: 2rem;
 }
 .has-white-color {
   color: #fff;
@@ -715,7 +729,7 @@ a.icon_button img:hover {
   color: var(--custom-text-color, #000);
 }
 .has-background {
-  background-color: var(--custom-background-color, #f0f0f0);
+  background-color: var(--custom-background-color, #0f0e22);
 }
 .has-link-color {
   color: var(--link-color, #007cba);
@@ -727,7 +741,7 @@ a.icon_button img:hover {
   color: #f7df1e; /* JavaScript color */
 }
 .token {
-  color: #000;
+  color: #f7df1e;
 }
 .tag {
   color: #e44d26;
@@ -809,4 +823,115 @@ a.icon_button img:hover {
 }
 .is-cropped {
   object-fit: cover;
+}
+code[class*="language-"],
+pre[class*="language-"] {
+  color: #f92aad;
+  text-shadow: 0 0 2px #100c0f, 0 0 5px rgba(220,7,142,0.2), 0 0 10px rgba(255,255,255,0.2);
+  background: none;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+pre[class*="language-"] {
+  padding: 1em;
+  margin: 0.5em 0;
+  overflow: auto;
+}
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background-color: transparent !important;
+  background-image: linear-gradient(to bottom, #2a2139 75%, #34294f);
+}
+:not(pre) > code[class*="language-"] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal;
+}
+.token.comment,
+.token.block-comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #8e8e8e;
+}
+.token.punctuation {
+  color: #ccc;
+}
+.token.tag,
+.token.attr-name,
+.token.namespace,
+.token.number,
+.token.unit,
+.token.hexcode,
+.token.deleted {
+  color: #e2777a;
+}
+.token.property,
+.token.selector {
+  color: #72f1b8;
+  text-shadow: 0 0 2px #100c0f, 0 0 10px rgba(37,124,85,0.459), 0 0 35px rgba(33,39,36,0.459);
+}
+.token.function-name {
+  color: #6196cc;
+}
+.token.boolean,
+.token.selector .token.id,
+.token.function {
+  color: #fdfdfd;
+  text-shadow: 0 0 2px #001716, 0 0 3px rgba(3,237,249,0.459), 0 0 5px rgba(3,237,249,0.459), 0 0 8px rgba(3,237,249,0.459);
+}
+.token.class-name {
+  color: #fff5f6;
+  text-shadow: 0 0 2px #000, 0 0 10px rgba(252,31,44,0.459), 0 0 5px rgba(252,31,44,0.459), 0 0 25px rgba(252,31,44,0.459);
+}
+.token.constant,
+.token.symbol {
+  color: #f92aad;
+  text-shadow: 0 0 2px #100c0f, 0 0 5px rgba(220,7,142,0.2), 0 0 10px rgba(255,255,255,0.2);
+}
+.token.important,
+.token.atrule,
+.token.keyword,
+.token.selector .token.class,
+.token.builtin {
+  color: #f4eee4;
+  text-shadow: 0 0 2px #393a33, 0 0 8px rgba(243,159,5,0.459), 0 0 2px rgba(243,159,5,0.459);
+}
+.token.string,
+.token.char,
+.token.attr-value,
+.token.regex,
+.token.variable {
+  color: #f87c32;
+}
+.token.operator,
+.token.entity,
+.token.url {
+  color: #67cdcc;
+}
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+.token.entity {
+  cursor: help;
+}
+.token.inserted {
+  color: #008000;
 }
