#48 - Adding year and month to blog post path

--- a/src/templates/blog_post.pug
+++ b/src/templates/blog_post.pug
@@ -2,6 +2,7 @@ extends ../templates/1999_html.pug
 
 block append page
   .content.blog_post
+    h1 !{ blogpost.formattedDate }
     h2= blogpost.title
     . 
         !{ blogpost.content }
