--- a/src/web/blog_posts.njk
+++ b/src/web/blog_posts.njk
@@ -7,5 +7,5 @@ pagination:
   data: blogposts
   size: 1
   alias: blogpost
-permalink: blog/{{blogpost.slug}}.html
+permalink: blog/{{blogpost.year}}/{{blogpost.month}}/{{blogpost.slug}}.html
 ---
