#48 - Adding lightbox to blog post images, adding description back to blog posts Eleventy front matter

--- a/src/web/blog_posts.njk
+++ b/src/web/blog_posts.njk
@@ -8,4 +8,5 @@ pagination:
   size: 1
   alias: blogpost
 permalink: blog/{{blogpost.year}}/{{blogpost.month}}/{{blogpost.slug}}.html
+description: Explore our digital studio retrospectives, project updates and technical guides. Gain insights into our process, expertise and abilities.
 ---
