--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -1,10 +1,20 @@
 h2 Blog
 .content
   .row
-    .column
-      a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024')
-        img(src='/assets/blog/2024/05/opal-banner.webp' style='width: 100%; height: auto; min-height: 269px; object-fit: cover;' alt='A close up photo of the surface of an Opal')
-    .column
+    .column(style="flex-basis: 55%")
+      a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html')
+        h3 How to implement Blender Principled BSDF Materials in Three.js (WebGL)
+      p.
+        Constructive Solid Geometry. Procedural generation. Physically Based Materials. Shader Programming.
+      p
+        | Delve into our 
+        a(href='/blog/2024/05/studio-roundup-may-2024.html') retrospective for Langenium
+        | !
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html' target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)')
+        img(src='https://portal.openstudios.xyz/app/uploads/2024/09/Screenshot-2024-06-28-162051-Medium.png' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
+  .row
+    .column(style="flex-basis: 55%")
       a(href='/blog/2024/05/studio-roundup-may-2024.html')
         h3 Studio Roundup for May 2024
       p.
@@ -13,11 +23,11 @@ h2 Blog
         | Read our 
         a(href='/blog/2024/05/studio-roundup-may-2024.html') retrospective for May 2024
         | !
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024')
+        img(src='/assets/blog/2024/05/opal-banner.webp' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A close up photo of the surface of an Opal')
   .row
-    .column
-      a(href='/blog/2024/04/studio-roundup-april-2024.html' target='_blank' title='Studio Roundup for April 2024')
-        img(src='/assets/blog/2024/04/emerald-pendant.jpg' style=' width: 100%; height: auto;' alt='A photo of necklace featuring an emerald pendant, set in 18k gold')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2024/04/studio-roundup-april-2024.html')
         h3 Studio Roundup for April 2024
       p.
@@ -26,11 +36,11 @@ h2 Blog
         | Explore our 
         a(href='/blog/2024/04/studio-roundup-april-2024.html') retrospective for April 2024
         | !
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2024/04/studio-roundup-april-2024.html' target='_blank' title='Studio Roundup for April 2024')
+        img(src='/assets/blog/2024/04/emerald-pendant.jpg' style=' width: 100%; height: auto;' alt='A photo of necklace featuring an emerald pendant, set in 18k gold')
   .row
-    .column
-      a(href='/blog/2024/03/studio-roundup-march-2024.html' target='_blank' title='Studio Roundup for March 2024')
-        img(src='/assets/blog/2024/03/1__M7aKKPzaeL1ubZgMFUeOg.webp' style=' width: 100%; height: auto;' alt='Can you tell which is the render and which is the original reference photo?')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2024/03/studio-roundup-march-2024.html')
         h3 Studio Roundup for March 2024
       p.
@@ -39,11 +49,11 @@ h2 Blog
         | Check out our 
         a(href='/blog/2024/03/studio-roundup-march-2024.html') retrospective for March 2024
         | !
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2024/03/studio-roundup-march-2024.html' target='_blank' title='Studio Roundup for March 2024')
+        img(src='/assets/blog/2024/03/1__M7aKKPzaeL1ubZgMFUeOg.webp' style=' width: 100%; height: auto;' alt='Can you tell which is the render and which is the original reference photo?')
   .row
-    .column
-      a(href='/blog/2024/02/studio-roundup-february-2024.html' target='_blank' title='Studio Roundup for February 2024')
-        img(src='/assets/blog/2024/02/1_dyIbSVF7tlb9HYpBb4AkMQ.webp' style=' width: 100%; height: auto;' alt='18k white gold petals surrounding a blush pink spinel. Part of the Garrett Ray Blossoms collection.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2024/02/studio-roundup-february-2024.html')
         h3 Studio Roundup for February 2024
       p.
@@ -52,11 +62,11 @@ h2 Blog
         | Enter our 
         a(href='/blog/2024/02/studio-roundup-february-2024.html') retrospective for February 2024
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2024/02/studio-roundup-february-2024.html' target='_blank' title='Studio Roundup for February 2024')
+        img(src='/assets/blog/2024/02/1_dyIbSVF7tlb9HYpBb4AkMQ.webp' style=' width: 100%; height: auto;' alt='18k white gold petals surrounding a blush pink spinel. Part of the Garrett Ray Blossoms collection.')
   .row
-    .column
-      a(href='/blog/2024/01/studio-roundup-january-2024.html' target='_blank' title='Studio Roundup for January 2024')
-        img(src='/assets/blog/2024/01/1_jvdn9ENFN3e46Mf5GFmpcA.webp' style=' width: 100%; height: auto;' alt='Featuring a pair of baby blue Aquamarine in a tapered baguette and octagon cut for a unique and contrasting pairing. This handmade toi et moi ring is part of the Garrett Ray One of a Kind Collection.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2024/01/studio-roundup-january-2024.html')
         h3 Studio Roundup for January 2024
       p.
@@ -65,11 +75,11 @@ h2 Blog
         | Learn more in our 
         a(href='/blog/2024/01/studio-roundup-january-2024.html') January 2024 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2024/01/studio-roundup-january-2024.html' target='_blank' title='Studio Roundup for January 2024')
+        img(src='/assets/blog/2024/01/1_jvdn9ENFN3e46Mf5GFmpcA.webp' style=' width: 100%; height: auto;' alt='Featuring a pair of baby blue Aquamarine in a tapered baguette and octagon cut for a unique and contrasting pairing. This handmade toi et moi ring is part of the Garrett Ray One of a Kind Collection.')
   .row
-    .column
-      a(href='/blog/2023/12/studio-roundup-december-2023.html' target='_blank' title='Studio Roundup for December 2023')
-        img(src='/assets/blog/2023/12/1_aN2AdpmiU7S0dGFpWUoixA.webp' style=' width: 100%; height: auto;' alt='Garrett is working on a cartoon version of Lady Gaga\’s Applause music video, recreating the fashionable costumes and sets as close as possible.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/12/studio-roundup-december-2023.html')
         h3 Studio Roundup for December 2023
       p.
@@ -78,12 +88,12 @@ h2 Blog
         | Check out our  
         a(href='/blog/2023/12/studio-roundup-december-2023.html') December 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/12/studio-roundup-december-2023.html' target='_blank' title='Studio Roundup for December 2023')
+        img(src='/assets/blog/2023/12/1_aN2AdpmiU7S0dGFpWUoixA.webp' style=' width: 100%; height: auto;' alt='Garrett is working on a cartoon version of Lady Gaga\’s Applause music video, recreating the fashionable costumes and sets as close as possible.')    
 
   .row
-    .column
-      a(href='/blog/2023/11/studio-roundup-november-2023.html' target='_blank' title='Studio Roundup for November 2023')
-        img(src='/assets/blog/2023/11/1_CgaG1-mK8Ys4idpaYmNavA.webp' style=' width: 100%; height: auto;' alt='Meet Nerv, a young demon who lives in hell. Demonology is coming in 2024!')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/11/studio-roundup-november-2023.html')
         h3 Studio Roundup for November 2023
       p.
@@ -92,12 +102,11 @@ h2 Blog
         | Set your sights on our 
         a(href='/blog/2023/11/studio-roundup-november-2023.html') November 2023 retro
         | .
-
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/11/studio-roundup-november-2023.html' target='_blank' title='Studio Roundup for November 2023')
+        img(src='/assets/blog/2023/11/1_CgaG1-mK8Ys4idpaYmNavA.webp' style=' width: 100%; height: auto;' alt='Meet Nerv, a young demon who lives in hell. Demonology is coming in 2024!')    
   .row
-    .column
-      a(href='/blog/2023/10/studio-roundup-october-2023.html' target='_blank' title='Studio Roundup for October 2023')
-        img(src='/assets/blog/2023/10/1_SLu3jtltivXMa4iTfvox4Q.webp' style=' width: 100%; height: auto;' alt='The Cottagecore Collection celebrates nature and the simpler things in life.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/10/studio-roundup-october-2023.html')
         h3 Studio Roundup for October 2023
       p.
@@ -106,12 +115,11 @@ h2 Blog
         | Check out our 
         a(href='/blog/2023/10/studio-roundup-october-2023.html') October 2023 retro
         | .
-
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/10/studio-roundup-october-2023.html' target='_blank' title='Studio Roundup for October 2023')
+        img(src='/assets/blog/2023/10/1_SLu3jtltivXMa4iTfvox4Q.webp' style=' width: 100%; height: auto;' alt='The Cottagecore Collection celebrates nature and the simpler things in life.')
   .row
-    .column
-      a(href='/blog/2023/09/studio-roundup-september-2023.html' target='_blank' title='Studio Roundup for September 2023')
-        img(src='/assets/blog/2023/09/1_CSEjUsaGdPWgjjutW2rc8w.webp' style=' width: 100%; height: auto;' alt='You know that feeling when you\'re driving at night down a scenic highway towards the city? In Perth Western Australia we have a road like that called Riverside Drive.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/09/studio-roundup-september-2023.html')
         h3 Studio Roundup for September 2023
       p.
@@ -120,12 +128,12 @@ h2 Blog
         | Read our 
         a(href='/blog/2023/09/studio-roundup-september-2023.html') September 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/09/studio-roundup-september-2023.html' target='_blank' title='Studio Roundup for September 2023')
+        img(src='/assets/blog/2023/09/1_CSEjUsaGdPWgjjutW2rc8w.webp' style=' width: 100%; height: auto;' alt='You know that feeling when you\'re driving at night down a scenic highway towards the city? In Perth Western Australia we have a road like that called Riverside Drive.')
 
   .row
-    .column
-      a(href='/blog/2023/08/studio-roundup-august-2023.html' target='_blank' title='Studio Roundup for August 2023')
-        img(src='/assets/blog/2023/08/1_KiFpOsEZO4yE7mzAeucs0w.webp' style=' width: 100%; height: auto;' alt='The Virgo Pendant features the Maiden’s hand holding a sheaf of wheat, with the Virgo constellation on the reverse side.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/08/studio-roundup-august-2023.html')
         h3 Studio Roundup for August 2023
       p.
@@ -134,12 +142,12 @@ h2 Blog
         | Read our 
         a(href='/blog/2023/08/studio-roundup-august-2023.html') August 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/08/studio-roundup-august-2023.html' target='_blank' title='Studio Roundup for August 2023')
+        img(src='/assets/blog/2023/08/1_KiFpOsEZO4yE7mzAeucs0w.webp' style=' width: 100%; height: auto;' alt='The Virgo Pendant features the Maiden’s hand holding a sheaf of wheat, with the Virgo constellation on the reverse side.')
 
   .row
-    .column
-      a(href='/blog/2023/07/studio-roundup-july-2023.html' target='_blank' title='Studio Roundup for July 2023')
-        img(src='/assets/blog/2023/07/1_vnEMqG7iAtvJXFlS-pMkIg.webp' style=' width: 100%; height: auto;' alt='Leo the proud lion, sculpted in precious metals with his majestically windswept mane.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/07/studio-roundup-july-2023.html')
         h3 Studio Roundup for July 2023
       p.
@@ -148,12 +156,12 @@ h2 Blog
         | And more in our 
         a(href='/blog/2023/07/studio-roundup-july-2023.html') July 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/07/studio-roundup-july-2023.html' target='_blank' title='Studio Roundup for July 2023')
+        img(src='/assets/blog/2023/07/1_vnEMqG7iAtvJXFlS-pMkIg.webp' style=' width: 100%; height: auto;' alt='Leo the proud lion, sculpted in precious metals with his majestically windswept mane.')
 
   .row
-    .column
-      a(href='/blog/2023/06/studio-roundup-june-2023.html' target='_blank' title='Studio Roundup for June 2023')
-        img(src='/assets/blog/2023/06/1_DJCaxmHRqHXM4tGMBJiPXA.webp' style=' width: 100%; height: auto;' alt='Cancer is emotional, highly intuitive, caring, and above all, dependable. Check out the collection.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/06/studio-roundup-june-2023.html')
         h3 Studio Roundup for June 2023
       p.
@@ -162,12 +170,12 @@ h2 Blog
         | Check out our 
         a(href='/blog/2023/06/studio-roundup-june-2023.html') June 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/06/studio-roundup-june-2023.html' target='_blank' title='Studio Roundup for June 2023')
+        img(src='/assets/blog/2023/06/1_DJCaxmHRqHXM4tGMBJiPXA.webp' style=' width: 100%; height: auto;' alt='Cancer is emotional, highly intuitive, caring, and above all, dependable. Check out the collection.')
 
   .row
-    .column
-      a(href='/blog/2023/05/studio-roundup-may-2023.html' target='_blank' title='Studio Roundup for May 2023')
-        img(src='/assets/blog/2023/05/1_UevzevyzGN0PlpF6XpOiCw.webp' style=' width: 100%; height: auto;' alt='This classic Gemini design features the mirror image of a mans face to represent the twins.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/05/studio-roundup-may-2023.html')
         h3 Studio Roundup for May 2023
       p.
@@ -176,12 +184,12 @@ h2 Blog
         | Read more in our 
         a(href='/blog/2023/05/studio-roundup-may-2023.html') May 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/05/studio-roundup-may-2023.html' target='_blank' title='Studio Roundup for May 2023')
+        img(src='/assets/blog/2023/05/1_UevzevyzGN0PlpF6XpOiCw.webp' style=' width: 100%; height: auto;' alt='This classic Gemini design features the mirror image of a mans face to represent the twins.')
 
   .row
-    .column
-      a(href='/blog/2023/04/studio-roundup-april-2023.html' target='_blank' title='Studio Roundup for April 2023')
-        img(src='/assets/blog/2023/04/1_shi4xFrJIWw9dQ2AfjBMfA.webp' style=' width: 100%; height: auto;' alt='The Taurus pendant features the bull and his steadfast horns on the front and the Taurus constellation on the back.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/04/studio-roundup-april-2023.html')
         h3 Studio Roundup for April 2023
       p.
@@ -190,12 +198,12 @@ h2 Blog
         | Read more in our 
         a(href='/blog/2023/04/studio-roundup-april-2023.html') April 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/04/studio-roundup-april-2023.html' target='_blank' title='Studio Roundup for April 2023')
+        img(src='/assets/blog/2023/04/1_shi4xFrJIWw9dQ2AfjBMfA.webp' style=' width: 100%; height: auto;' alt='The Taurus pendant features the bull and his steadfast horns on the front and the Taurus constellation on the back.')
 
   .row
-    .column
-      a(href='/blog/2023/03/studio-roundup-march-2023.html' target='_blank' title='Studio Roundup for March 2023')
-        img(src='/assets/blog/2023/03/1_Qm2e0hvRssEhyWg90oIQog.webp' style=' width: 100%; height: auto;' alt='Take a wearable piece of zen from the garden with the Blossoms Ring.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/03/studio-roundup-march-2023.html')
         h3 Studio Roundup for March 2023
       p.
@@ -205,11 +213,12 @@ h2 Blog
         a(href='/blog/2023/03/studio-roundup-march-2023.html')  March 2023 retro
         | .
 
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/03/studio-roundup-march-2023.html' target='_blank' title='Studio Roundup for March 2023')
+        img(src='/assets/blog/2023/03/1_Qm2e0hvRssEhyWg90oIQog.webp' style=' width: 100%; height: auto;' alt='Take a wearable piece of zen from the garden with the Blossoms Ring.')
+    
   .row
-    .column
-      a(href='/blog/2023/02/studio-roundup-february-2023.html' target='_blank' title='Studio Roundup for February 2023')
-        img(src='/assets/blog/2023/02/1_Lp57gnKdUAvEF7Ir3ctn8A.webp' style=' width: 100%; height: auto;' alt='Form Aura Colours is an illustration produced as part of research for an ongoing production.')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/02/studio-roundup-february-2023.html')
         h3 Studio Roundup for February 2023
       p.
@@ -218,12 +227,12 @@ h2 Blog
         | Read our 
         a(href='/blog/2023/02/studio-roundup-february-2023.html') February 2023 retro
         | .
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/02/studio-roundup-february-2023.html' target='_blank' title='Studio Roundup for February 2023')
+        img(src='/assets/blog/2023/02/1_Lp57gnKdUAvEF7Ir3ctn8A.webp' style=' width: 100%; height: auto;' alt='Form Aura Colours is an illustration produced as part of research for an ongoing production.')
 
   .row
-    .column
-      a(href='/blog/2023/01/studio-roundup-january-2023.html' target='_blank' title='Studio Roundup for January 2023')
-        img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of our entry in British Vogue')
-    .column
+    .column(style="flex-basis: 55%")
       a(href='/blog/2023/01/studio-roundup-january-2023.html')
         h3 Studio Roundup for January 2023
       p.
@@ -232,3 +241,8 @@ h2 Blog
         | Check out our 
         a(href='/blog/2023/01/studio-roundup-january-2023.html') January 2023 update
         | .
+
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2023/01/studio-roundup-january-2023.html' target='_blank' title='Studio Roundup for January 2023')
+        img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of our entry in British Vogue')
+    
