--- a/src/styles/sections/content.styl
+++ b/src/styles/sections/content.styl
@@ -55,6 +55,10 @@
     flex-wrap: wrap;
     margin: 0rem 2rem;
     max-width: 960px;
+
+    p {
+        margin-bottom: 1rem;
+    }
 }
 
 .content.wide {
