#48 - Splitting blog index page off with new 2023 page, sitemap exemption for new page

--- a/src/web/sitemap.pug
+++ b/src/web/sitemap.pug
@@ -8,7 +8,7 @@ eleventyExcludeFromCollections: true
 
 urlset(xmlns="http://www.sitemaps.org/schemas/sitemap/0.9")
     each page in collections.all
-        if page.url.indexOf('/blog/') < 0 || page.url.indexOf('studio-roundup') >= 0
+        if page.url.indexOf('/blog/') < 0 || page.url.indexOf('/blog/2023.html') >= 0 || page.url.indexOf('studio-roundup') >= 0
             url
                 - urlstring = 'https://openstudios.xyz' + page.url
                 loc= urlstring
