#48 - Adding virtual office blog article, extending cache time to 24h, adding blog post header and footer nav links

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -1,11 +1,10 @@
 h2 Blog
-.menu(role="navigation")
-    ul(role="menu")
-        li(role="presentation") Current
-        li(role="presentation")
-            a(href='/blog/2023.html' role="menuitem") 2023
-
 .content
+  .menu(role="navigation")
+      ul(role="menu")
+          li(role="presentation") Current
+          li(role="presentation")
+              a(href='/blog/2023.html' role="menuitem") 2023
   .row
     .column(style="flex-basis: 55%")
       a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html')
@@ -18,7 +17,7 @@ h2 Blog
         | !
     .column(style="flex-basis: 35%; padding: 1.5rem 0;")
       a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html' target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)')
-        img(src='https://portal.openstudios.xyz/app/uploads/2024/09/Screenshot-2024-06-28-162051-Medium.png' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
+        img(src='/assets/blog/2024/09/Screenshot-2024-06-28-162051-Medium.png' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the Langenium blog article')
   .row
     .column(style="flex-basis: 55%")
       a(href='/blog/2024/05/studio-roundup-may-2024.html')
@@ -85,8 +84,8 @@ h2 Blog
       a(href='/blog/2024/01/studio-roundup-january-2024.html' target='_blank' title='Studio Roundup for January 2024')
         img(src='/assets/blog/2024/01/1_jvdn9ENFN3e46Mf5GFmpcA.webp' style=' width: 100%; height: auto;' alt='Featuring a pair of baby blue Aquamarine in a tapered baguette and octagon cut for a unique and contrasting pairing. This handmade toi et moi ring is part of the Garrett Ray One of a Kind Collection.')
 
-.menu(role="navigation")
-    ul(role="menu")
-        li(role="presentation") Current
-        li(role="presentation")
-            a(href='/blog/2023.html' role="menuitem") 2023
+  .menu(role="navigation")
+      ul(role="menu")
+          li(role="presentation") Current
+          li(role="presentation")
+              a(href='/blog/2023.html' role="menuitem") 2023
