--- a/src/styles/sections/blog_post.styl
+++ b/src/styles/sections/blog_post.styl
@@ -3,27 +3,49 @@
 
     h2 {
         font-family: SourceSans !important;
-        font-size: 4rem !important;
+        font-size: 2rem !important;
         text-transform: none !important;
-        padding-bottom: 2rem !important;
+        padding-bottom: 1rem !important;
         font-style: italic !important;
-        line-height: 6rem !important;
+        line-height: 4rem !important;
         font-weight: bold !important;
+    }
+
+    h3 {
+        font-size: 1.5rem !important;
     }
 
     img {
         width: 100% !important;
         height: auto !important;
+        margin-bottom: 2rem;
     }
     
     li strong,
     li,
     p {
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
         line-height: 1.5rem;
     }
 
-    li strong {
-        display: block;
+    > ul {
+        margin-top: 1rem;
+    }
+
+    li {
+        margin-top: 0.5rem;
+    }
+    
+}
+
+@media screen and (min-width: 768px) {
+    .blog_post h2 {
+            font-size: 4rem !important;
+            padding-bottom: 2rem !important;
+            line-height: 6rem !important;
+    }
+
+    .blog_post h3 {
+        font-size: 2rem !important;
     }
 }
