Fixing wp-element-caption top margin

--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -723,6 +723,7 @@ a.icon_button img:hover {
   font-size: 0.875em;
   text-align: center;
   color: #666;
+  margin-top: -1rem;
 }
 .size-large {
   width: 100%;
