--- a/src/styles/sections/wordpress_content.styl
+++ b/src/styles/sections/wordpress_content.styl
@@ -78,56 +78,59 @@
 }
 
 /* Code Syntax Highlighting */
-.language-html {
-    color: #e44d26; /* HTML color */
-}
+pre.wp-block-code {
 
-.language-javascript {
-    color: #f7df1e; /* JavaScript color */
-}
+    .language-html {
+        color: #e44d26; /* HTML color */
+    }
 
-.token {
-    color: #f7df1e;
-}
+    .language-javascript {
+        color: #f7df1e; /* JavaScript color */
+    }
 
-.tag {
-    color: #e44d26;
-}
+    .token {
+        color: #f7df1e;
+    }
 
-.punctuation {
-    color: #000;
-}
+    .tag {
+        color: #e44d26;
+    }
 
-.attr-name {
-    color: #007cba;
-}
+    .punctuation {
+        color: #000;
+    }
 
-.attr-value {
-    color: #d14;
-}
+    .attr-name {
+        color: #007cba;
+    }
 
-.attr-equals {
-    color: #000;
-}
+    .attr-value {
+        color: #d14;
+    }
 
-.script {
-    color: #000;
-}
+    .attr-equals {
+        color: #000;
+    }
 
-.keyword {
-    color: #007bff; /* Keyword color */
-}
+    .script {
+        color: #000;
+    }
 
-.function {
-    color: #3c8dbc; /* Function color */
-}
+    .keyword {
+        color: #007bff; /* Keyword color */
+    }
 
-.operator {
-    color: #000;
-}
+    .function {
+        color: #3c8dbc; /* Function color */
+    }
 
-.number {
-    color: #007cba; /* Number color */
+    .operator {
+        color: #000;
+    }
+
+    .number {
+        color: #007cba; /* Number color */
+    }
 }
 
 /* Columns and Gallery */
@@ -253,92 +256,95 @@ pre[class*="language-"] {
 	white-space: normal;
 }
 
-.token.comment,
-.token.block-comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-	color: #8e8e8e;
-}
+code {
 
-.token.punctuation {
-	color: #ccc;
-}
+    .token.comment,
+    .token.block-comment,
+    .token.prolog,
+    .token.doctype,
+    .token.cdata {
+        color: #8e8e8e;
+    }
 
-.token.tag,
-.token.attr-name,
-.token.namespace,
-.token.number,
-.token.unit,
-.token.hexcode,
-.token.deleted {
-	color: #e2777a;
-}
+    .token.punctuation {
+        color: #ccc;
+    }
 
-.token.property,
-.token.selector {
-	color: #72f1b8;
-	text-shadow: 0 0 2px #100c0f, 0 0 10px #257c5575, 0 0 35px #21272475;
-}
+    .token.tag,
+    .token.attr-name,
+    .token.namespace,
+    .token.number,
+    .token.unit,
+    .token.hexcode,
+    .token.deleted {
+        color: #e2777a;
+    }
 
-.token.function-name {
-	color: #6196cc;
-}
+    .token.property,
+    .token.selector {
+        color: #72f1b8;
+        text-shadow: 0 0 2px #100c0f, 0 0 10px #257c5575, 0 0 35px #21272475;
+    }
 
-.token.boolean,
-.token.selector .token.id,
-.token.function {
-	color: #fdfdfd;
-	text-shadow: 0 0 2px #001716, 0 0 3px #03edf975, 0 0 5px #03edf975, 0 0 8px #03edf975;
-}
+    .token.function-name {
+        color: #6196cc;
+    }
 
-.token.class-name {
-	color: #fff5f6;
-	text-shadow: 0 0 2px #000, 0 0 10px #fc1f2c75, 0 0 5px #fc1f2c75, 0 0 25px #fc1f2c75;
-}
+    .token.boolean,
+    .token.selector .token.id,
+    .token.function {
+        color: #fdfdfd;
+        text-shadow: 0 0 2px #001716, 0 0 3px #03edf975, 0 0 5px #03edf975, 0 0 8px #03edf975;
+    }
 
-.token.constant,
-.token.symbol {
-	color: #f92aad;
-	text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3;
-}
+    .token.class-name {
+        color: #fff5f6;
+        text-shadow: 0 0 2px #000, 0 0 10px #fc1f2c75, 0 0 5px #fc1f2c75, 0 0 25px #fc1f2c75;
+    }
 
-.token.important,
-.token.atrule,
-.token.keyword,
-.token.selector .token.class,
-.token.builtin {
-	color: #f4eee4;
-	text-shadow: 0 0 2px #393a33, 0 0 8px #f39f0575, 0 0 2px #f39f0575;
-}
+    .token.constant,
+    .token.symbol {
+        color: #f92aad;
+        text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3;
+    }
 
-.token.string,
-.token.char,
-.token.attr-value,
-.token.regex,
-.token.variable {
-	color: #f87c32;
-}
+    .token.important,
+    .token.atrule,
+    .token.keyword,
+    .token.selector .token.class,
+    .token.builtin {
+        color: #f4eee4;
+        text-shadow: 0 0 2px #393a33, 0 0 8px #f39f0575, 0 0 2px #f39f0575;
+    }
 
-.token.operator,
-.token.entity,
-.token.url {
-	color: #67cdcc;
-}
+    .token.string,
+    .token.char,
+    .token.attr-value,
+    .token.regex,
+    .token.variable {
+        color: #f87c32;
+    }
 
-.token.important,
-.token.bold {
-	font-weight: bold;
-}
+    .token.operator,
+    .token.entity,
+    .token.url {
+        color: #67cdcc;
+    }
 
-.token.italic {
-	font-style: italic;
-}
+    .token.important,
+    .token.bold {
+        font-weight: bold;
+    }
 
-.token.entity {
-	cursor: help;
-}
+    .token.italic {
+        font-style: italic;
+    }
 
-.token.inserted {
-	color: green;
+    .token.entity {
+        cursor: help;
+    }
+
+    .token.inserted {
+        color: green;
+    }
 }
