--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -755,43 +755,43 @@ a.icon_button img:hover {
 .has-link-color {
   color: var(--link-color, #007cba);
 }
-.language-html {
+pre.wp-block-code .language-html {
   color: #e44d26; /* HTML color */
 }
-.language-javascript {
+pre.wp-block-code .language-javascript {
   color: #f7df1e; /* JavaScript color */
 }
-.token {
+pre.wp-block-code .token {
   color: #f7df1e;
 }
-.tag {
+pre.wp-block-code .tag {
   color: #e44d26;
 }
-.punctuation {
+pre.wp-block-code .punctuation {
   color: #000;
 }
-.attr-name {
+pre.wp-block-code .attr-name {
   color: #007cba;
 }
-.attr-value {
+pre.wp-block-code .attr-value {
   color: #d14;
 }
-.attr-equals {
+pre.wp-block-code .attr-equals {
   color: #000;
 }
-.script {
+pre.wp-block-code .script {
   color: #000;
 }
-.keyword {
+pre.wp-block-code .keyword {
   color: #007bff; /* Keyword color */
 }
-.function {
+pre.wp-block-code .function {
   color: #3c8dbc; /* Function color */
 }
-.operator {
+pre.wp-block-code .operator {
   color: #000;
 }
-.number {
+pre.wp-block-code .number {
   color: #007cba; /* Number color */
 }
 .wp-block-columns {
@@ -881,78 +881,78 @@ pre[class*="language-"] {
   border-radius: 0.3em;
   white-space: normal;
 }
-.token.comment,
-.token.block-comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
+code .token.comment,
+code .token.block-comment,
+code .token.prolog,
+code .token.doctype,
+code .token.cdata {
   color: #8e8e8e;
 }
-.token.punctuation {
+code .token.punctuation {
   color: #ccc;
 }
-.token.tag,
-.token.attr-name,
-.token.namespace,
-.token.number,
-.token.unit,
-.token.hexcode,
-.token.deleted {
+code .token.tag,
+code .token.attr-name,
+code .token.namespace,
+code .token.number,
+code .token.unit,
+code .token.hexcode,
+code .token.deleted {
   color: #e2777a;
 }
-.token.property,
-.token.selector {
+code .token.property,
+code .token.selector {
   color: #72f1b8;
   text-shadow: 0 0 2px #100c0f, 0 0 10px rgba(37,124,85,0.459), 0 0 35px rgba(33,39,36,0.459);
 }
-.token.function-name {
+code .token.function-name {
   color: #6196cc;
 }
-.token.boolean,
-.token.selector .token.id,
-.token.function {
+code .token.boolean,
+code .token.selector .token.id,
+code .token.function {
   color: #fdfdfd;
   text-shadow: 0 0 2px #001716, 0 0 3px rgba(3,237,249,0.459), 0 0 5px rgba(3,237,249,0.459), 0 0 8px rgba(3,237,249,0.459);
 }
-.token.class-name {
+code .token.class-name {
   color: #fff5f6;
   text-shadow: 0 0 2px #000, 0 0 10px rgba(252,31,44,0.459), 0 0 5px rgba(252,31,44,0.459), 0 0 25px rgba(252,31,44,0.459);
 }
-.token.constant,
-.token.symbol {
+code .token.constant,
+code .token.symbol {
   color: #f92aad;
   text-shadow: 0 0 2px #100c0f, 0 0 5px rgba(220,7,142,0.2), 0 0 10px rgba(255,255,255,0.2);
 }
-.token.important,
-.token.atrule,
-.token.keyword,
-.token.selector .token.class,
-.token.builtin {
+code .token.important,
+code .token.atrule,
+code .token.keyword,
+code .token.selector .token.class,
+code .token.builtin {
   color: #f4eee4;
   text-shadow: 0 0 2px #393a33, 0 0 8px rgba(243,159,5,0.459), 0 0 2px rgba(243,159,5,0.459);
 }
-.token.string,
-.token.char,
-.token.attr-value,
-.token.regex,
-.token.variable {
+code .token.string,
+code .token.char,
+code .token.attr-value,
+code .token.regex,
+code .token.variable {
   color: #f87c32;
 }
-.token.operator,
-.token.entity,
-.token.url {
+code .token.operator,
+code .token.entity,
+code .token.url {
   color: #67cdcc;
 }
-.token.important,
-.token.bold {
+code .token.important,
+code .token.bold {
   font-weight: bold;
 }
-.token.italic {
+code .token.italic {
   font-style: italic;
 }
-.token.entity {
+code .token.entity {
   cursor: help;
 }
-.token.inserted {
+code .token.inserted {
   color: #008000;
 }
