#29 - Removing new iframe pages from sitemap

--- a/src/web/iframes/2023/08/studio-roundup-august-2023.pug
+++ b/src/web/iframes/2023/08/studio-roundup-august-2023.pug
@@ -2,11 +2,7 @@
 permalink: "iframes/blog/2023/08/studio-roundup-august-2023.html"
 dynamicPermalink: false
 title: Studio Roundup for August 2023 | Open Studios | Perth, Western Australia
-description: Explore our digital studio case studies, where we feature some of our best work. Gain insights into our process, expertise and abilities.
-cover: https://openstudios.xyz/assets/images/pages/case_studies.jpg
-date: 2023-12-28T16:58:16.267Z
-priority: "0.9"
-changefreq: daily
+eleventyExcludeFromCollections: true
 ---
 
 extends ../../../../templates/1999_html.pug
