--- a/src/web/iframes/2023/12/studio-roundup-december-2023.pug
+++ b/src/web/iframes/2023/12/studio-roundup-december-2023.pug
@@ -2,11 +2,7 @@
 permalink: "iframes/blog/2023/12/studio-roundup-december-2023.html"
 dynamicPermalink: false
 title: Studio Roundup for December 2023 | Open Studios | Perth, Western Australia
-description: Explore our digital studio case studies, where we feature some of our best work. Gain insights into our process, expertise and abilities.
-cover: https://openstudios.xyz/assets/images/pages/case_studies.jpg
-date: 2024-02-04T23:30:00.000Z
-priority: "0.9"
-changefreq: daily
+eleventyExcludeFromCollections: true
 ---
 
 extends ../../../../templates/1999_html.pug
