--- a/src/web/iframes/blog_posts.njk
+++ b/src/web/iframes/blog_posts.njk
@@ -1,7 +1,5 @@
 ---
 layout: blog_post_iframe.pug
-priority: "0.9"
-changefreq: daily
 pagination:
   data: blogposts
   size: 1
@@ -9,5 +7,5 @@ pagination:
 permalink: iframes/blog/{{blogpost.year}}/{{blogpost.month}}/{{blogpost.slug}}.html
 eleventyComputed:
   cover: "{{blogpost.cover}}"
-description: Explore our digital studio retrospectives, project updates and technical guides. Gain insights into our process, expertise and abilities.
+eleventyExcludeFromCollections: true
 ---
