--- a/src/web/iframes/2024/05/studio-roundup-may-2024.pug
+++ b/src/web/iframes/2024/05/studio-roundup-may-2024.pug
@@ -2,11 +2,7 @@
 permalink: "iframes/blog/2024/05/studio-roundup-may-2024.html"
 dynamicPermalink: false
 title: Studio Roundup for May 2024 | Open Studios | Perth, Western Australia
-description: Explore our digital studio case studies, where we feature some of our best work. Gain insights into our process, expertise and abilities.
-cover: https://openstudios.xyz/assets/images/pages/case_studies.jpg
-date: 2024-06-24T23:32:00.000Z
-priority: "0.9"
-changefreq: daily
+eleventyExcludeFromCollections: true
 ---
 
 extends ../../../../templates/1999_iframe.pug
